# lab

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  flake.nix  rust-toolchain.toml
capsa/crates/cli/: Cargo.toml
capsa/crates/cli/src/: main.rs
capsa/crates/cli/tests/: darwin_e2e_launch.rs  foreground_pgrp.rs
capsa/crates/control/: Cargo.toml
capsa/crates/control/src/: lib.rs
capsa/crates/core/: Cargo.toml
capsa/crates/core/src/: config.rs  lib.rs
capsa/crates/net/: Cargo.toml
capsa/crates/net/src/: config.rs  lib.rs  policy.rs
capsa/crates/netd/: Cargo.toml
capsa/crates/netd/src/: control.rs  main.rs  runtime.rs
capsa/crates/netd/tests/: sandboxed_readiness.rs  spawn_readiness.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  process.rs  subprocess.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  ffi.rs  launcher.rs  lib.rs  message.rs  proc.rs  runtime.rs  service.rs  start.rs  transport.rs  vmm_spec.rs
crates/core/src/boot/: mod.rs
crates/core/src/daemon/: constants.rs  launch_spec_args.rs  mod.rs  process.rs  resolve.rs  supervisor.rs  traits.rs
crates/core/src/launcher/: interface_plan.rs
crates/core/src/libkrun/: error.rs  ffi.rs  mod.rs  vm.rs
crates/core/src/lifecycle/: child.rs  mod.rs  netd.rs  orchestrate.rs  plan.rs  test_helpers.rs  vmm.rs
crates/fittings/: Cargo.toml
crates/fittings/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: expand.rs  lib.rs  parse.rs
crates/macros/tests/: router_dispatch.rs  schema_generation.rs  typed_client.rs  ui.rs
crates/net/: Cargo.toml
crates/net/src/: config.rs  lib.rs  policy.rs  util.rs
crates/net/src/dns/: mod.rs
crates/net/src/frame/: io.rs
crates/net/src/gateway/: config.rs  device.rs  dhcp.rs  dns.rs  ingress.rs  mod.rs  run.rs
crates/net/src/nat/: flow.rs  icmp.rs  mod.rs  udp.rs
crates/net/src/switch/: bridge.rs  socketpair.rs
crates/netd/: Cargo.toml
crates/netd/src/: main.rs  runtime.rs
crates/netd/tests/: sandboxed_readiness.rs  spawn_readiness.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/src/: capability.rs  darwin.rs  discover.rs  lib.rs  linux.rs  paths.rs  tokio.rs
crates/sandbox/src/darwin/: mod.rs  paths.rs  policy.rs  seatbelt.rs
crates/sandbox/tests/: builder.rs  fd_inheritance.rs  filesystem.rs  network.rs  privilege_hardening.rs  resource_limits.rs  sandbox_command.rs  sandbox_contract.rs  sandbox_inherited_fds.rs  sandbox_probe_harness.rs  sandbox_runtime.rs  sandbox_tokio.rs  spike_d_sandboxed_vmm.rs  spike_e_fd_chain.rs  tokio.rs
crates/sandbox/tests/common/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/spawn/: Cargo.toml
crates/spawn/src/: lib.rs  mode.rs  runner.rs  schema.rs
crates/spec/: Cargo.toml
crates/testkit/: Cargo.toml
crates/testkit/src/: fixtures.rs  lib.rs
examples/hello-api/: Cargo.toml
examples/hello-api/src/: lib.rs
examples/hello-service/: Cargo.toml
examples/hello-service/src/: main.rs
fittings/crates/core/: Cargo.toml
fittings/examples/hello-service/: Cargo.toml
lockin/crates/cli/: Cargo.toml
lockin/crates/cli/src/: glob.rs  (+3 more)
lockin/crates/config/: Cargo.toml
lockin/crates/infer/: Cargo.toml
lockin/crates/observe/: Cargo.toml  build.rs
mcpfit/example/: Cargo.toml  README.md  package-lock.json  package.json
mcpfit/example/scripts/: check-with-mcp-sdk.mjs
mcpfit/example/src/: main.rs
mcpfit/example/tests/: client_smoke.rs  stdio_e2e.rs
orb/: Cargo.toml  README.md
orb/nix/: default.nix  package.nix
orb/src/: agent.rs  app.rs  autocomplete_modal.rs  commands.rs  composer.rs  help_modal.rs  main.rs  modal.rs  transcript.rs  turn.rs  ui.rs  utils.rs
orb/src/ui/: live_viewport.rs  markdown.rs  mod.rs  scrollback.rs  terminal.rs
pilot/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
pilot/docs/: claude.md  codex.md  gemini.md  pi.md  sandboxing.md
pilot/docs/internal/: permissions.md
pilot/examples/: chat.rs  greeting.rs  multi_turn.rs  with_api_key.rs  with_paths.rs
pilot/examples/repl/: Cargo.toml
pilot/src/: driver.rs  error.rs  event.rs  lib.rs  process.rs  session.rs  test_support.rs  turn.rs
pilot/src/driver/: claude.rs  codex.rs  gemini.rs  pi.rs
pilot/tests/: e2e_smoke.rs  proptest_parsers.rs  recorded_scenarios.rs  secret_hygiene.rs
pilot/tests/support/: fake_agent.rs
rafaello/: CONTRIBUTING.md  Cargo.toml  README.md
rafaello/crates/rafaello/: Cargo.toml
rafaello/crates/rafaello-core/: Cargo.toml
rafaello/crates/rafaello-fetch/: Cargo.toml  openrpc.json  rafaello.toml
rafaello/crates/rafaello-mailcat/: Cargo.toml
rafaello/crates/rafaello-mockprovider/: Cargo.toml
rafaello/crates/rafaello-openai/: Cargo.toml  rafaello.toml
rafaello/crates/rafaello-openai-stub/: Cargo.toml  openrpc.json  rafaello.toml
rafaello/crates/rafaello-readfile/: Cargo.toml  openrpc.json  rafaello.toml
rafaello/crates/rafaello-tui/: Cargo.toml
rafaello/fixtures/rafaello-mailcat-method-typo/: openrpc.json
rafaello/fixtures/rafaello-mockprovider/: rafaello.toml
rafaello/fixtures/rafaello-readfile/: openrpc.json
rafaello/nix/: default.nix  devenv.nix  package.nix
rafaello/plans/: README.md  decisions.md  glossary.md  overview-review-1.md  overview-review-2.md  overview-review-3.md  overview.md
rafaello/plans/milestones/: README.md  pi-review-1.md  pi-review-2.md  pi-review-3.md
rafaello/plans/stream-a-security/: README.md  notes.md  rfc-camel-on-v1.md  rfc-security-model.md
rafaello/plans/stream-b-fittings/: README.md  notes.md  pi-review-2.md  rfc-fittings-errors.md  rfc-fittings-notifications.md
rafaello/plans/stream-c-scripting/: notes.md  rfc-scripting-decision.md
rafaello/plans/stream-e-renderer/: notes.md
rafaello/plans/stream-f-manifest/: README.md  notes.md  rfc-manifest-schema.md
scope/: CONTRIBUTING.md  Cargo.toml  README.md
scope/crates/scope/: Cargo.toml
scope/examples/: plugins.toml  reader_plugin.py  search_plugin.py  wikipedia_plugin.py  wikipedia_search_plugin.py
scope/nix/: default.nix  devenv.nix  package.nix
(+1566 files in other folders)
