[workspace]
members = [
  ".",
  "crates/core",
  "crates/sandbox",
  "crates/vmm",
]
resolver = "2"

[package]
name = "capsa"
version = "0.1.0"
edition = "2021"
default-run = "capsa"

[dependencies]
anyhow = "1.0"
capsa-core = { path = "crates/core" }
clap = { version = "4.5", features = ["derive"] }
