[workspace]
members = [
    "crates/core",
    "crates/wire",
    "crates/transport",
    "crates/server",
    "crates/spawn",
    "crates/fittings",
    "crates/testkit",
    "crates/macros",
    "examples/hello-service",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.dependencies.anyhow]
version = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
