[package]
name = "orb"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "orb"
path = "src/main.rs"

[dependencies]
pilot = { path = "../pilot" }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures-util = "0.3"
ratatui = "0.30"
ratskin = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tui-textarea = { package = "tui-textarea-2", version = "0.11", features = ["search"] }
uuid = "1"
