[package]
name = "pilot"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Drive headless AI coding-agent CLIs (claude, codex, gemini, pi) over their stream-JSON modes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luizribeiro/lab"
keywords = ["agent", "claude", "codex", "gemini", "ai"]
categories = ["api-bindings", "command-line-utilities"]

[features]
default = []
test-support = []

[dependencies]
futures-core = "0.3"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[[bin]]
name = "fake_agent"
path = "tests/support/fake_agent.rs"

[dev-dependencies]
expect-test = "1"
futures-util = "0.3"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
