[workspace]
members = ["crates/rafaello", "crates/rafaello-core"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
sha2 = "0.10"
data-encoding = "2"
thiserror = "1"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
outpost = { path = "../outpost/crates/outpost" }
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
