[workspace]
members = ["crates/scope"]
resolver = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.30.4"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
pr-run-mode = "plan"
tag-namespace = "scope"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"
