[package]
name = "fittings-client"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings-core = { path = "../core" }
fittings-wire = { path = "../wire" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
async-trait.workspace = true
fittings-testkit = { path = "../testkit" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
