[package]
name = "fittings-client"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
fittings-core = { path = "../core" }
fittings-transport = { path = "../transport" }
fittings-wire = { path = "../wire" }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "rt", "sync", "time"] }

[dev-dependencies]
fittings-testkit = { path = "../testkit" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
