[package]
name = "capsa-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-net = { path = "../net" }
capsa-sandbox = { path = "../sandbox" }
capsa-spec = { path = "../spec" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "time"] }
