[package]
name = "fittings"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings-core = { path = "../core" }
fittings-server = { path = "../server" }
fittings-spawn = { path = "../spawn" }
fittings-transport = { path = "../transport" }
fittings-wire = { path = "../wire" }
