[package]
name = "fittings"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
schemars.workspace = true
fittings-client = { path = "../client" }
fittings-core = { path = "../core" }
fittings-macros = { path = "../macros" }
fittings-server = { path = "../server" }
fittings-spawn = { path = "../spawn" }
fittings-transport = { path = "../transport" }
fittings-wire = { path = "../wire" }
