[package]
name = "fittings-macros"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
schemars.workspace = true
tokio.workspace = true
fittings = { path = "../fittings" }
trybuild = "1"
