[package]
name = "capsa-net"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "socket"] }
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }
tokio = { version = "1.45", features = ["macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread", "test-util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
