[package]
name = "capsa-netd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-core = { path = "../core" }
capsa-net = { path = "../net" }
libc = "0.2"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
