[package]
name = "capsa-netd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-net = { path = "../net" }
capsa-spec = { path = "../spec" }
libc = "0.2"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
capsa-sandbox = { path = "../sandbox" }
serde_json = "1.0"
