[package]
name = "capsa-sandbox"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1.0"
lddtree = "0.5"
libc = "0.2"
tempfile = "3.13"
tokio = { version = "1", features = ["process"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "process", "rt"] }

[[test]]
name = "sandbox_tokio"
required-features = ["tokio"]
