[package]
name = "capsa-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-process = { path = "../capsa-process" }
lddtree = "0.5"
libc = "0.2"
tempfile = "3.13"

[dev-dependencies]
capsa-test-support = { path = "../test-support" }
tokio = { version = "1", features = ["macros", "process", "rt"] }
