[package]
name = "capsa-sandbox"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1.0"
capsa-process = { path = "../capsa-process" }
libc = "0.2"
tempfile = "3.13"
tokio = { version = "1", features = ["process"], optional = true }

[dev-dependencies]
capsa-test-support = { path = "../test-support" }
tokio = { version = "1", features = ["macros", "process", "rt"] }

[[test]]
name = "tokio"
required-features = ["tokio"]
