[package]
name = "fittings-server"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
fittings-core = { path = "../core" }
fittings-wire = { path = "../wire" }
futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }

[dev-dependencies]
fittings-testkit = { path = "../testkit" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
