[package]
name = "fittings-spawn"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings-core = { path = "../core" }
fittings-server = { path = "../server" }
fittings-transport = { path = "../transport" }
fittings-wire = { path = "../wire" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
