[package]
name = "fittings-testkit"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
fittings-core = { path = "../core" }
fittings-wire = { path = "../wire" }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
