[package]
name = "hello-api"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings = { path = "../../crates/fittings" }
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
fittings-testkit = { path = "../../crates/testkit" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
