[package]
name = "hello-service"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings = { path = "../../crates/fittings" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "spawn_smoke"
path = "../../tests/spawn_smoke.rs"
