[package]
name = "hello-service"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
fittings = { path = "../../crates/fittings" }
hello-api = { path = "../hello-api" }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[[test]]
name = "spawn_smoke"
path = "../../tests/spawn_smoke.rs"
