[package]
name = "hello-service"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings = { path = "../../crates/fittings" }
hello-api = { path = "../hello-api" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fittings-testkit = { path = "../../crates/testkit" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[test]]
name = "spawn_smoke"
path = "../../tests/spawn_smoke.rs"
