[package]
name = "mcp-server"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
mcpfit = { path = "../crates/mcpfit" }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
serde_json = "1"
