[package]
name = "capsa-cli"
version = "0.1.0"
edition = "2021"
default-run = "capsa"

[[bin]]
name = "capsa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
capsa = { path = "../capsa" }
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
capsa-testkit = { path = "../testkit" }
