[package]
name = "capsa-cli"
version = "0.1.0"
edition = "2021"
default-run = "capsa"

[[bin]]
name = "capsa"
path = "src/main.rs"

[[bin]]
name = "capsa-fg-tty-probe"
path = "src/bin/fg_tty_probe.rs"
test = false
doc = false

[dependencies]
anyhow = "1.0"
capsa = { path = "../capsa" }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
lockin = { path = "../../../lockin/crates/sandbox" }
tokio = { version = "1.45", features = ["macros", "rt"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
capsa-testkit = { path = "../testkit" }
