[package]
name = "capsa-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-net = { path = "../net" }
lockin = { path = "../../../lockin/crates/sandbox" }
lockin-process = { path = "../../../lockin/crates/process" }
capsa-spec = { path = "../spec" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
