[package]
name = "capsa-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "capsa-fake-netd"
path = "src/bin/fake_netd.rs"

[dependencies]
anyhow = "1.0"
capsa-control = { path = "../control" }
capsa-net = { path = "../net" }
lockin = { path = "../../../lockin/crates/sandbox", features = ["tokio"] }
lockin-process = { path = "../../../lockin/crates/process" }
capsa-spec = { path = "../spec" }
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread", "test-util", "time"] }
