[package]
name = "capsa-net"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-parser = "0.8"
heapless = "0.8"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "socket"] }
outpost = { path = "../../../outpost/crates/outpost" }
resolv-conf = "0.7"
smoltcp = { version = "0.12", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["io-util", "macros", "rt", "rt-multi-thread", "test-util"] }
tracing-test = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)", "cfg(fuzzing)"] }
