[package]
name = "capsa-netd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
capsa-control = { path = "../control" }
capsa-net = { path = "../net" }
capsa-spec = { path = "../spec" }
outpost = { path = "../../../outpost/crates/outpost" }
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
lockin = { path = "../../../lockin/crates/sandbox" }
lockin-process = { path = "../../../lockin/crates/process" }
capsa-testkit = { path = "../testkit" }
serde_json = "1.0"
