[package]
name = "fittings-core"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
