[package]
name = "hello-service"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings = { path = "../../crates/fittings" }
hello-api = { path = "../hello-api" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fittings-testkit = { path = "../../crates/testkit" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[test]]
name = "spawn_smoke"
path = "../../tests/spawn_smoke.rs"

[[test]]
name = "jsonrpc_conformance"
path = "../../tests/jsonrpc_conformance.rs"

[[test]]
name = "core_request_id_shape"
path = "../../tests/core_request_id_shape.rs"

[[test]]
name = "core_predefined_error_data"
path = "../../tests/core_predefined_error_data.rs"

[[test]]
name = "wire_outbound_error_round_trip"
path = "../../tests/wire_outbound_error_round_trip.rs"

[[test]]
name = "wire_inbound_error_round_trip"
path = "../../tests/wire_inbound_error_round_trip.rs"

[[test]]
name = "error_marker_round_trip"
path = "../../tests/error_marker_round_trip.rs"

[[test]]
name = "service_code_ranges"
path = "../../tests/service_code_ranges.rs"

[[test]]
name = "invalid_service_code_marker"
path = "../../tests/invalid_service_code_marker.rs"

[[test]]
name = "cancelled_no_wire_mapping"
path = "../../tests/cancelled_no_wire_mapping.rs"
