[package]
name = "hello-service"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fittings = { path = "../../crates/fittings" }
hello-api = { path = "../hello-api" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fittings-testkit = { path = "../../crates/testkit" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[test]]
name = "spawn_smoke"
path = "../../tests/spawn_smoke.rs"

[[test]]
name = "jsonrpc_conformance"
path = "../../tests/jsonrpc_conformance.rs"

[[test]]
name = "core_request_id_shape"
path = "../../tests/core_request_id_shape.rs"

[[test]]
name = "core_predefined_error_data"
path = "../../tests/core_predefined_error_data.rs"

[[test]]
name = "wire_outbound_error_round_trip"
path = "../../tests/wire_outbound_error_round_trip.rs"

[[test]]
name = "wire_inbound_error_round_trip"
path = "../../tests/wire_inbound_error_round_trip.rs"

[[test]]
name = "error_marker_round_trip"
path = "../../tests/error_marker_round_trip.rs"

[[test]]
name = "service_code_ranges"
path = "../../tests/service_code_ranges.rs"

[[test]]
name = "invalid_service_code_marker"
path = "../../tests/invalid_service_code_marker.rs"

[[test]]
name = "cancelled_no_wire_mapping"
path = "../../tests/cancelled_no_wire_mapping.rs"

[[test]]
name = "service_context_basic"
path = "../../tests/service_context_basic.rs"

[[test]]
name = "error_preservation_round_trip"
path = "../../tests/error_preservation_round_trip.rs"

[[test]]
name = "handler_panic_maps_to_panic"
path = "../../tests/handler_panic_maps_to_panic.rs"

[[test]]
name = "service_context_notify"
path = "../../tests/service_context_notify.rs"

[[test]]
name = "bounded_notify_drop"
path = "../../tests/bounded_notify_drop.rs"

[[test]]
name = "peerhandle_outside_handler"
path = "../../tests/peerhandle_outside_handler.rs"

[[test]]
name = "peerhandle_server_initiated_call"
path = "../../tests/peerhandle_server_initiated_call.rs"

[[test]]
name = "inbound_request_no_service"
path = "../../tests/inbound_request_no_service.rs"

[[test]]
name = "inbound_request_with_service"
path = "../../tests/inbound_request_with_service.rs"

[[test]]
name = "peerhandle_bidirectional"
path = "../../tests/peerhandle_bidirectional.rs"

[[test]]
name = "id_namespace_isolation"
path = "../../tests/id_namespace_isolation.rs"

[[test]]
name = "service_context_peer_call"
path = "../../tests/service_context_peer_call.rs"

[[test]]
name = "peerhandle_close_drain"
path = "../../tests/peerhandle_close_drain.rs"

[[test]]
name = "peerhandle_dropped_future_cancels"
path = "../../tests/peerhandle_dropped_future_cancels.rs"

[[test]]
name = "notification_handler_panic"
path = "../../tests/notification_handler_panic.rs"

[[test]]
name = "id_null_explicit_request"
path = "../../tests/id_null_explicit_request.rs"

[[test]]
name = "id_null_concurrent_rejected"
path = "../../tests/id_null_concurrent_rejected.rs"

[[test]]
name = "cancellation_outside_semaphore"
path = "../../tests/cancellation_outside_semaphore.rs"

[[test]]
name = "service_context_cancelled_by_token"
path = "../../tests/service_context_cancelled_by_token.rs"

[[test]]
name = "service_context_cancelled_by_handler"
path = "../../tests/service_context_cancelled_by_handler.rs"
