[package]
name = "lockin-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "lockin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
lockin = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
