[package]
name = "lockin-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "lockin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
lockin = { path = "../sandbox" }
outpost = { path = "../../../outpost/crates/outpost" }
outpost-proxy = { path = "../../../outpost/crates/outpost-proxy" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
