[package]
name = "lockin-cli"
version = "0.3.0"
edition = "2021"
description = "Build and run a child process inside an OS sandbox (Linux: syd, macOS: sandbox-exec)."
license = "MIT"
repository = "https://github.com/luizribeiro/lab"
homepage = "https://github.com/luizribeiro/lab/tree/main/lockin"
publish = false

[package.metadata.dist]
dist = true
formula = "lockin"

[[bin]]
name = "lockin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
lockin = { path = "../sandbox" }
lockin-config = { path = "../config" }
lockin-infer = { path = "../infer" }
outpost = { path = "../../../outpost/crates/outpost" }
outpost-proxy = { path = "../../../outpost/crates/outpost-proxy" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
