[package]
name = "lockin-infer"
version = "0.2.0"
edition = "2021"
description = "Policy inference for lockin (observe a program, generate a starter lockin.toml)."
license = "MIT"
repository = "https://github.com/luizribeiro/lab"
homepage = "https://github.com/luizribeiro/lab/tree/main/lockin"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
anyhow = "1"

[dev-dependencies]
tempfile = "3"
