[package]
name = "lockin-infer"
version = "0.3.0"
edition = "2021"
description = "Policy inference for lockin (observe a program, generate a starter lockin.toml)."
license = "MIT"
repository = "https://github.com/luizribeiro/lab"
homepage = "https://github.com/luizribeiro/lab/tree/main/lockin"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
anyhow = "1"
lockin = { path = "../sandbox", features = ["tokio"] }
lockin-config = { path = "../config" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
