[package]
name = "lockin-observe"
version = "0.3.2"
edition = "2021"
description = "Observation transport and event types for lockin (used by lockin-infer and lockin-trace)."
license = "MIT"
repository = "https://github.com/luizribeiro/lab"
homepage = "https://github.com/luizribeiro/lab/tree/main/lockin"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
anyhow = "1"
lockin = { path = "../sandbox", features = ["tokio"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
